<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.endless</groupId>
    <artifactId>endless-ddd-simplified</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>endless-ddd-simplified</name>
    <description>Simplified DDD architecture for Spring Boot</description>

    <modules>
        <module>domain-simplified-server</module>
        <module>endless-ddd-simplified-starter</module>
        <module>endless-ddd-simplified-generator</module>
    </modules>

    <properties>
        <!-- Project -->
        <java.version>21</java.version>
        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
        <maven.compiler.encoding>${encoding}</maven.compiler.encoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>

        <!-- Framework -->
        <spring-boot.version>2.7.18</spring-boot.version>
        <druid.version>1.2.23</druid.version>
        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <pagehelper.version>2.1.0</pagehelper.version>
        <tlog-all.version>1.5.2</tlog-all.version>
        <springfox.version>3.0.0</springfox.version>
        <openapi.version>1.8.0</openapi.version>
        <therapi-javadoc.version>0.15.0</therapi-javadoc.version>

        <!-- Infrastructure -->
        <minio.version>8.5.13</minio.version>
        <mysql.version>9.0.0</mysql.version>

        <jna.version>5.14.0</jna.version>
        <user-agent-utils.version>1.21</user-agent-utils.version>

        <!-- Utils -->
        <jjwt.version>0.12.6</jjwt.version>
        <bcprov.version>1.79</bcprov.version>
        <fastjson2.version>2.0.52</fastjson2.version>
        <snakeyaml.version>2.2</snakeyaml.version>

        <!-- Dev -->
        <lombok.version>1.18.34</lombok.version>
    </properties>

    <!-- 依赖声明 -->
    <dependencyManagement>
        <dependencies>
            <!-- Starters -->
            <dependency>
                <groupId>org.endless</groupId>
                <artifactId>endless-ddd-simplified-starter</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Framework -->
            <!-- SpringBoot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Starters -->
            <!-- Druid -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <!-- Mybatis Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <!-- Page Helper 分页 -->
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.version}</version>
            </dependency>
            <!-- TLog-all 分布式日志追踪 -->
            <dependency>
                <groupId>com.yomahub</groupId>
                <artifactId>tlog-all-spring-boot-starter</artifactId>
                <version>${tlog-all.version}</version>
            </dependency>
            <!-- Springdoc OpenAPI 依赖 -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-security</artifactId>
                <version>${openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-javadoc</artifactId>
                <version>${openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.therapi</groupId>
                <artifactId>therapi-runtime-javadoc-scribe</artifactId>
                <version>${therapi-javadoc.version}</version>
            </dependency>
            <!-- Infrastructure -->
            <!-- Adapter -->
            <!-- MinIO -->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <!-- Mysql -->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <!-- OS -->
            <!-- Jna  -->
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <!-- UserAgentUtils 客户端操作系统、浏览器 -->
            <dependency>
                <groupId>eu.bitwalker</groupId>
                <artifactId>UserAgentUtils</artifactId>
                <version>${user-agent-utils.version}</version>
            </dependency>

            <!-- Utils -->
            <!-- Jjwt json server token -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bcprov.version}</version>
            </dependency>
            <!-- Fastjson -->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <!-- Snakeyaml -->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>

            <!-- Dev -->
            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
